cheryl: enable wake unlock and unable refresh controls .

--- a/overlay-lineage/frameworks/base/packages/SystemUI/res/values/lineage_config.xml
+++ b/overlay-lineage/frameworks/base/packages/SystemUI/res/values/lineage_config.xml
@@ -19,9 +19,12 @@
          with a rear-mounted sensor want this, but certain devices have
          the sensor embedded in the power key and listening all the time
          causes a poor experience. -->
-    <bool name="config_fingerprintWakeAndUnlock">false</bool>
+    <bool name="config_fingerprintWakeAndUnlock">true</bool>
 
     <!-- Max visible notification icons -->
     <integer name="config_maxVisibleNotificationIcons">6</integer>
     <integer name="config_maxVisibleNotificationIconsOnLock">7</integer>
+
+     <!-- True if the device has a kernel high refresh rate only screen, then use Api in IWindowManager -->
+    <bool name="config_useLegacyRefreshRateControl">false</bool>
 </resources>
