cheryl: setting: enable refresh controls.

--- a/overlay/packages/apps/Settings/res/values/dimens.xml
+++ b/overlay/packages/apps/Settings/res/values/dimens.xml
@@ -18,5 +18,5 @@
     <item name="fingerprint_sensor_location_fraction_x" type="fraction">100%</item>
     <item name="fingerprint_sensor_location_fraction_y" type="fraction">50%</item>
     <!-- Whether to show min refresh rate in display settings -->
-    <bool name="config_show_refresh_rate_controls">true</bool>
+    <bool name="config_show_refresh_rate_controls">false</bool>
 </resources>
