cheryl: overlay: Set physical power button and fps location
This sets config_is_powerbutton_fps, even though the device doesn't
have fps embedded in the power button. It makes frameworks report that
fingerprint sensor is located on the side of the device, which
can be observed when enrolling a fingerprint for the first time.

Change-Id: Ifa079488db642c8a470e40cb585c08e9c85d7cf4

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -934,8 +934,8 @@
     <!-- Shutdown if the battery temperature exceeds (this value * 0.1) Celsius. -->
     <integer name="config_shutdownBatteryTemperature">589</integer>
 
-    <!-- Set to true for built in fps ctl. -->
-    <bool name="config_show_smooth_display">true</bool>
+    <!-- Indicates whether device has a power button fingerprint sensor. -->
+    <bool name="config_is_powerbutton_fps" translatable="false">true</bool>
 
     <!-- List of biometric sensors on the device, in decreasing strength. Consumed by AuthService
          when registering authenticators with BiometricService. Format must be ID:Modality:Strength,
