cheryl: RazerParts: add:active wakeup

--- a/RazerParts/res/xml/device_settings.xml
+++ b/RazerParts/res/xml/device_settings.xml
@@ -38,6 +38,12 @@
             android:summary="@string/pref_dolby_atmos_summary"
             android:title="@string/pref_dolby_atmos" />
 
+        <Preference
+            android:icon="@drawable/flash"
+            android:key="active_wakeup"
+            android:summary="@string/pref_doze_summary"
+            android:title="@string/pref_doze" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
