--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -970,4 +970,11 @@
         <item>1150</item>
         <item>115</item>
     </array>
+
+    <!-- Remote server that can provide NTP responses. -->
+    <string translatable="false" name="config_ntpServer">pool.ntp.org</string>
+
+    <!-- Use MIUI captive portal. -->
+    <string name="default_captive_portal_http_url" translatable="false">http://connect.rom.miui.com/generate_204</string>
+    <string name="default_captive_portal_https_url" translatable="false">https://connect.rom.miui.com/generate_204</string>
 </resources>
