--- a/overlay-lineage/frameworks/base/packages/SystemUI/res/values/lineage_config.xml
+++ b/overlay-lineage/frameworks/base/packages/SystemUI/res/values/lineage_config.xml
@@ -19,7 +19,7 @@
          with a rear-mounted sensor want this, but certain devices have
          the sensor embedded in the power key and listening all the time
          causes a poor experience. -->
-    <bool name="config_fingerprintWakeAndUnlock">false</bool>
+    <bool name="config_fingerprintWakeAndUnlock">true</bool>
 
     <!-- Max visible notification icons -->
     <integer name="config_maxVisibleNotificationIcons">6</integer>
