--- a/doze/res/xml/doze_settings.xml
+++ b/doze/res/xml/doze_settings.xml
@@ -30,8 +30,8 @@
         android:summary="@string/wake_on_gesture_summary" />
 
     <PreferenceCategory
-        android:key="pickup_sensor"
-        android:title="@string/pickup_sensor_title">
+        android:key="tilt_sensor"
+        android:title="@string/tilt_sensor_title">
 
         <SwitchPreference
             android:defaultValue="false"
