cheryl: Ignore IWlan status in the mobile icon pipeline
Some legacy devices such as mata and cheryl lack an IWlan stack. These
devices can set this overlay to true in order not to incorrectly display
a permanent exclamation mark over the mobile network signal icon.

Change-Id: Ife02d90706990bf28c156c9850ef0773802bc5b0

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -22,4 +22,7 @@
 <resources>
     <!-- Doze: does this device support STATE_DOZE?  -->
     <bool name="doze_display_state_supported">true</bool>
+
+    <!-- Whether the mobile signal icon pipeline should ignore IWlan status -->
+    <bool name="config_mobileIconIgnoresIWlan">true</bool>
 </resources>
